# discord_channel_cleaner

./: Cargo.toml  Dockerfile  LICENSE  README.md  settings.toml
src/: clean_channel.rs  main.rs  settings.rs  utilities.rs
