[package]
name = "discord_channel_cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Phil Baum <phil@phib.io>"]
license = "MIT"
description = "Delete messages in discord channels."
readme = "README.md"
homepage = "https://github.com/philphilphil/discord_channel_cleaner"
repository = "https://github.com/philphilphil/discord_channel_cleaner"
keywords = ["discord"]
categories = ["command-line-utilities"]

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
config = "0.13.3"
serde = {version = "1", features = ["derive"] }
anyhow = "1.0.68"

[dependencies.tokio]
version = "1.21"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "time"]
